# LLM_Study

./: README.md  pyproject.toml
scripts/: deploy_to_hf.sh
test/: find_related_news.py  related_news.output  summerize_news.py  summerize_output.txt  test.py  test_ui.html
workflow/: config.py  main.py  workflow.py
workflow/nodes/: db_node.py  embedding_node.py  related_news_node.py  rss_node.py  summarizer_node.py  update_db_node.py
workflow/utils/: db.py  reset_db.py
