[project]
name = "newscurator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15",
    "dotenv>=0.9.9",
    "feedparser>=6.0.11",
    "git-filter-repo>=2.47.0",
    "huggingface-hub>=0.33.4",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.0",
    "langchain-ollama>=0.3.5",
    "langgraph>=0.5.3",
    "sentence-transformers>=5.0.0",
]
